--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "apollo-server-express": "^2.18.2",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "moment": "^2.24.0",
